--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,3 @@
-body {
-  margin: 0;
-}
-
 @font-face {
   font-family: "Varela Round";
   src: url("./assets/fonts/VarelaRound.ttf");
@@ -15,11 +11,24 @@ body {
   --font-secondary: #008080;
 }
 
-h1, h2, h3, h4 {
+body {
+  margin: 0;
   font-family: "Varela Round";
-  font-weight: bold;
   color: var(--font-primary);
-  text-shadow: var(--dark-primary) 5px 5px;
+}
+
+
+h1, h2, h3, h4 {
+  font-weight: bold;
+  text-shadow: var(--dark-primary) 3px 3px;
+}
+
+h1 {
+  font-size: clamp(2vw, 8rem, 5vw);
+}
+
+h2 {
+  font-size: clamp(1vw, 8rem, 4vw);
 }
 
 button {
@@ -39,6 +48,7 @@ button {
   text-decoration: none;
   border: 2px solid var(--dark-primary);
   border-radius: 10px;
+  padding: 0 10px;
   background-color: var(--background-secondary);
   color: var(--font-secondary);
   font-family: "Varela Round";
@@ -50,7 +60,14 @@ button {
 }
 
 .button:hover, button:hover {
-  padding: 0 24px;
-  background-color: var(--background-secondary);
-  color: var(--font-secondary);
+  background-color: var(--background-primary);
+  color: var(--font-primary);
+  border-color: var(--background-secondary);
+}
+
+.page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
 }
