--- a/templates/TemplateName.css
+++ b/templates/TemplateName.css
@@ -1,6 +1,1 @@
-.TemplateName {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
+.TemplateName {}
