--- a/src/components/SearchDropDown/SearchDropDown.css
+++ b/src/components/SearchDropDown/SearchDropDown.css
@@ -1,13 +1,14 @@
 ._search-drop-down-container {
   position: relative;
   background-color: thistle;
+  z-index: 1;
 }
 
 ._search-bar-row {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: space-between;
   background-color: white;
   border: 1px solid black;
 }
@@ -29,10 +30,17 @@
   color: black;
 }
 
+._search-bar-row > button:hover,
+._search-bar-row > button:focus {
+  background-color: rgba(0,0,0,0.2);
+}
+
 ._drop-down-menu {
   position: absolute;
   width: 100%;
   overflow-y: auto;
+  border: 1px solid black;
+  border-top: none;
 }
 
 ._drop-down-menu > button {
