--- a/src/components/SessionSearchPage/SessionSearchPage.css
+++ b/src/components/SessionSearchPage/SessionSearchPage.css
@@ -58,6 +58,30 @@
   gap: 10px;
 }
 
+.session-list-header > button {
+  background: none;
+  border: none;
+  margin: 0;
+  padding: 0;
+  color: var(--font-primary);
+}
+
+.session-list-header-sort-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.session-list-header-sort-container > p {
+  margin: 0;
+  font-size: 10px;
+}
+
+.session-list-header-sort-container > .sort-button-hiding {
+  opacity: 0;
+}
+
 .session-list-item {
   border-radius: 10px;
   padding: 0 10px 0 20px;
