--- a/src/components/SearchDropDown/SearchDropDown.css
+++ b/src/components/SearchDropDown/SearchDropDown.css
@@ -27,10 +27,10 @@
   border-radius: 0;
   background: none;
   color: black;
+  height: 100%;
 }
 
-._search-bar-row > button:hover,
-._search-bar-row > button:focus {
+._search-bar-row > button:hover {
   background-color: rgba(0,0,0,0.2);
 }
 
