--- a/src/components/CreateReportPage/CreateReportPage.css
+++ b/src/components/CreateReportPage/CreateReportPage.css
@@ -5,7 +5,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  width: 70%;
+  width: 25%;
   gap: 20px;
 }
 
@@ -13,7 +13,8 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
+  width: 100%;
   gap: 10px;
 }
 
@@ -32,7 +33,7 @@
 }
 
 .create-form-buttons > button {
-  width: 10%;
+  width: 50%;
 }
 
 .create-form-buttons > button:hover {
