--- a/src/components/SearchDropDown/SearchDropDown.css
+++ b/src/components/SearchDropDown/SearchDropDown.css
@@ -38,6 +38,7 @@
   position: absolute;
   width: 100%;
   overflow-y: auto;
+  overflow-x: hidden;
   border: 1px solid black;
   border-top: none;
 }
